added popup and fixed changes

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       // Fixed nav
       $(window).on('scroll', function() {
         var wScroll = $(this).scrollTop();
-        wScroll > 420 ? $('#mamenu').addClass('fixed-menu') : $('#mamenu').removeClass('fixed-menu');
+        wScroll > 420 ? $('#menunavbar').addClass('fixed-menu') : $('#menunavbar').removeClass('fixed-menu');
 	    });
     });  
 </script>
